Added Timber Logo; added source files from timber doc generation

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -378,7 +378,7 @@ html, body {
     margin-bottom: 0;
     border-top: 1px solid #ccc;
     padding-top: 1.2em;
-    padding-bottom: 1.2em;
+    padding-bottom: 0.4em;
     background-image: linear-gradient(to bottom, rgba(#fff, 0.4), rgba(#fff, 0));
   }
 
@@ -514,6 +514,11 @@ html, body {
     @include text-shadow(1px 1px 0 #666);
     background: linear-gradient(to top left, #F7E633 0%, #F1D32F 100%);
   }
+}
+
+.logo-wrapper {
+  padding:35px 70px;
+  background-color:rgb(42,164,71)
 }
 
 ////////////////////////////////////////////////////////////////////////////////
