--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -69,6 +69,13 @@ under the License.
         </div>
         <ul class="search-results"></ul>
       <% end %>
+      <% if current_page.data.toc_headers %>
+        <ul class="toc-footer">
+          <% current_page.data.toc_headers.each do |footer| %>
+            <li><%= footer %></li>
+          <% end %>
+        </ul>
+      <% end %>
       <div id="toc">
       </div>
       <% if current_page.data.toc_footers %>
