More updates and shit

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -70,7 +70,7 @@ under the License.
         <ul class="search-results"></ul>
       <% end %>
       <% if current_page.data.toc_headers %>
-        <ul class="toc-footer">
+        <ul class="toc-header">
           <% current_page.data.toc_headers.each do |footer| %>
             <li><%= footer %></li>
           <% end %>
